model_training.ipynb

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -884,10 +884,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\"weather_multi_output_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(model, f)"
+    "import joblib\n",
+    "import gzip\n",
+    "with gzip.GzipFile("weather_model_compressed.pkl.gz", "wb", compresslevel=9) as f:\n",
+    "    joblib.dump(model, f)"
    ]
   },
   {
